index.html modified

--- a/Vertical Header Personal Portfolio/index.html
+++ b/Vertical Header Personal Portfolio/index.html
@@ -235,7 +235,7 @@
         <!-- Footer Section -->
          <footer class="footer">
           <p>
-            &copy; <span id="year"></span> Sivakaran SM. All rights reserved.
+            &copy; <span id="year"></span> Jathurshan SJ. All rights reserved.
           </p>
          </footer>
 
